Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1473

ProcessPendingAssignments accesses tablet metadata without a lock

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.9.0
    • 0.10.0
    • master
    • None

    Description

      I've seen Java tests being flaky with this crash:

      F0530 13:51:16.076247 30686 cow_object.h:82] Check failed: lock_.HasReaders() || lock_.HasWriteLock()
      *** Check failure stack trace: ***
           @     0x7f8c52d0fe64  kudu::CowObject<>::state()
           @     0x7f8c52d0848b  kudu::master::AsyncCreateReplica::AsyncCreateReplica()
           @     0x7f8c52cf7af2  kudu::master::CatalogManager::SendCreateTabletRequests()
           @     0x7f8c52cf7375  kudu::master::CatalogManager::ProcessPendingAssignments()
           @     0x7f8c52ce4ad7  kudu::master::CatalogManagerBgTasks::Run()  
      

      It seems like this code path doesn't acquire the read lock on the tablet, and thus fires the assertion

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            adar Adar Dembo
            tlipcon Todd Lipcon
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment